2003-08-09  Damien McGinnes

	* Mercator/Segment.cpp: use a local random number generator to
	  ensure the rng state cant be affected by other use of rand() in
	  an app. Change the RNG code to utilise the MersenneTwister.
	* configure.in: require wfmath 0.3 for the MersenneTwister RNG.
	* Mercator/BasePoint.h: seed() now returns an unsigned int.
	* this RNG gives a 20% spped increase on optimized (-O2) code 
	  compared with rand(). (unoptimized it's roughly the same)

          generate 400 tiles (height only, res 64)
          std rand = 1.75 seconds = 4.4 ms per tile
          mt rand = 1.41 seconds = 3.5 ms per tile

2003-08-08  Damien McGinnes

	* Mercator/Segment.cpp: changed round() to rint()
 	* updated TODO

2003-08-06  Al Riddoch  <alriddoch@zepler.org>

	* Removed depency on Atlas-C++ for now.

2003-08-06  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h, Mercator/Segment.cpp: Add vertex cache
	  pointer to segment. Vertex buffer is handled by client.

2003-07-31  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/TerrainMod.h, Mercator/TerrainMod_impl.h,
	  Mercator/TerrainMod.cpp: Move definition of virtual
	  methods out of the headers, as they can't be inlined.

	* tests/testTerrainMod.cpp: Add unit test for terrain mods.

2003-07-28  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Buffer.cpp, Mercator/Buffer.h: Add accessor operators so
	  data can be accessed by coordinate and channel. Store size locally.

	* Mercator/Matrix.h: Use unsigned int for indexs. Safer.

	* Mercator/GrassShader.cpp Mercator/GrassShader.h: Add new shader
	  for bands which also have a slope dependence.

	* tests/testShader.cpp: Include GrassShader in tests.

2003-07-28  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/DepthShader.cpp, Mercator/DepthShader.h: Fix some
	  bugs.

	* Mercator/ThresholdShader.cpp, Mercator/ThresholdShader.h:
	  Fix order of constructor argments.

2003-07-27  Al Riddoch  <alriddoch@zepler.org>
